@@ -1,3 +1,11 @@
+2010-11-04 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-mail-send-and-exit): New.
+	(tinydebian-bts-mail-ctrl-bug-unsubscribe): Add parameter SEND
+	which obeys user's prefix arg.
+	(tinydebian-bts-mail-ctrl-bug-subscribe): Add parameter SEND
+	which obeys user's prefix arg.
+
 2010-11-04 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-bug-subscribe): Add
